test/TestPhases/typechecker/invalid/booleanCallX2.blc
module


activity other ()()
    await true
end

activity empty ()()
    var x: bool = false

    x = x or true
    run other(x)
    
end
